<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.captainmccann.talkanalyzer.newTalk.NewTalkFragment1">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/new_talk_title"
        android:hint="@string/title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="24dp" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/new_talk_speaker"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/new_talk_title"
        android:hint="@string/speaker"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="24dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:id="@+id/new_talk_spinner"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/new_talk_speaker"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="24dp"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:spinnerMode="dialog"
        android:visibility="visible" />

</android.support.constraint.ConstraintLayout>
