...
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline7"
        android:text="@string/total_talks" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        android:layout_marginTop="16dp"
...
