<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/new_talk_confirm"
        android:title="@string/done"
        app:showAsAction="always"
        android:icon="@drawable/icon_confirm"/>

</menu>